--- a/templates/index.html
+++ b/templates/index.html
@@ -22,8 +22,8 @@
         </div>
     </div>
     <div class="sixteen columns link">
-        <h3><a href="http://django-instagram-uid.herokuapp.com/">Django Source Code</a></h3>
-        <h3><a href="http://rails-instagram-uid.herokuapp.com/">Rails Source Code</a></h3>
+        <h3><a href="https://github.com/zeantsoi/django-instagram-uid">Django Source Code</a></h3>
+        <h3><a href="https://github.com/zeantsoi/django-instagram-uid">Rails Source Code</a></h3>
     </div>
     <div class="sixteen columns attribution">
         <a href="http://www.zeantsoi.com/">Created by Zean Tsoi</a>
