--- a/templates/index.html
+++ b/templates/index.html
@@ -11,19 +11,28 @@
                 <input type="text" name="access_token" placeholder="Access Token (optional)">
             </div>
         </form>
-        <p>If you'd like to user your own Instagram access token, you can enter it above. <a href="http://instagram.com/developer/register/" alt="Instagram Registration">Get an access token here.</a></p>
+        <p>If you'd like to user your own Instagram access token, you can enter it above. <a href="http://instagram.com/developer/register/">Get an access token here.</a></p>
     </div>
     <div class="eight columns form uid">
-        <img src="{{ STATIC_URL }}img/loading.gif" alt="loading" id="loading" style="position: absolute; left: 50%; margin-left: -16px; top: 50%; margin-top: -16px; display: none;"/>
+        <img src="{{ STATIC_URL }}img/loading.gif" alt="loading" id="loading" />
         <h2>Instagram User ID</h2>
-        <h3></h3>
-        <h4></h4>
+
+        <h3>{{ id }}</h3>
+        <h4>{{ error }}</h4>
         <div class="attributes">
+            {% if profile_picture %}<img src="{{ profile_picture }}" alt="{{ username }}" />{% endif %}
+            <div class="info">
+                <ul>
+                    {% if full_name %}<li>{{ full_name }}</li>{% endif %}
+                    {% if website %}<li>{{ website }}</li>{% endif %}
+                    {% if bio %}<li>{{ bio }}</li>{% endif %}
+                </ul>
+            </div>
         </div>
     </div>
     <div class="sixteen columns link">
         <h3><a href="https://github.com/zeantsoi/django-instagram-uid">Django Source Code</a></h3>
-        <h3><a href="https://github.com/zeantsoi/django-instagram-uid">Rails Source Code</a></h3>
+        <h3><a href="https://github.com/zeantsoi/rails-instagram-uid">Rails Source Code</a></h3>
     </div>
     <div class="sixteen columns attribution">
         <a href="http://www.zeantsoi.com/">Created by Zean Tsoi</a>
