Fixing misspelling of scripts.js file

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
         <title>Instagram User ID Lookup</title>
 
         <script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
-        <script type="text/javascript" src="{{ STATIC_URL }}js/scriptsss.js"></script>
+        <script type="text/javascript" src="{{ STATIC_URL }}js/scripts.js"></script>
 
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/base.css" media="screen" />
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/layout.css" media="screen" />
